FAQ overflow fix

--- a/static/assets/css/main.css
+++ b/static/assets/css/main.css
@@ -3681,7 +3681,6 @@ input[type=color] {
 .faq__wrapper .accordion-body p {
   font-size: 20px;
   line-height: 1.5;
-  overflow-wrap: anywhere;
 
 }
 .faq__wrapper .accordion-body p:last-child {
